--- a/codesketch_textarea.html
+++ b/codesketch_textarea.html
@@ -1,87 +1,106 @@
 <script defer>
 // Based on https://github.com/tomhodgins/liveeditor.
 function init() {
-    const doc = document.getElementById('_parent'),
-        html = document.getElementById('ui_html'),
-        css = document.getElementById('ui_css'),
-        js = document.getElementById('ui_js'),
-        clear = document.getElementById('ui_clearall');
-        const iframe = document.getElementById("preview");
-        const iframedoc = iframe.contentWindow.document;
-    // Display combined content from HTML, CSS, and JS textareas in the iframe.
+    // Get references to key DOM elements
+    const doc = document.getElementById('_parent'), // Parent container for the textareas and preview
+        html = document.getElementById('ui_html'), // HTML textarea
+        css = document.getElementById('ui_css'), // CSS textarea
+        js = document.getElementById('ui_js'), // JavaScript textarea
+        clear = document.getElementById('ui_clearall'); // Clear button (currently unused)
+    const iframe = document.getElementById("preview"); // Preview iframe
+    const iframedoc = iframe.contentWindow.document; // Document inside the iframe
+
+    // Function to display the combined content from HTML, CSS, and JS in the iframe
     function show_preview() {
-        iframedoc.open();
+        iframedoc.open(); // Open the iframe document for writing
         iframe.contentWindow.onerror = function(message, source, lineno, colno, error) {
+            // Suppress errors in the iframe
             return true;
         };
+        // Write the HTML, CSS, and JS content into the iframe
         iframedoc.write("<head><style>" + css.value + "</style></head><body>" + html.value + "<script>" + js.value + "<\/script></body>");
-        iframedoc.close();
-        
+        iframedoc.close(); // Close the iframe document
     }
 
+    // Function to handle the "Tab" key for indentation in the textareas
     function handle_tab(event) {
         if (event.key === "Tab") {
-            const target = event.target,
-                start = target.selectionStart,
-                end = target.selectionEnd,
-                value = target.value;
+            const target = event.target, // The textarea where the event occurred
+                start = target.selectionStart, // Start of the selection
+                end = target.selectionEnd, // End of the selection
+                value = target.value; // Current value of the textarea
+            // Insert two spaces at the cursor position
             target.value = value.substring(0, start) + "  " + value.substring(end);
-            target.selectionStart = target.selectionEnd = start + 2;
-            event.preventDefault();
+            target.selectionStart = target.selectionEnd = start + 2; // Move the cursor after the inserted spaces
+            event.preventDefault(); // Prevent the default tab behavior
         }
     }
 
+    // Function to clear all textareas
     function clearAll() {
-        html.value = '';
-        css.value = '';
-        js.value = '';
+        html.value = ''; // Clear HTML textarea
+        css.value = ''; // Clear CSS textarea
+        js.value = ''; // Clear JavaScript textarea
     }
 
-    doc.addEventListener('keydown', handle_tab);
-    doc.addEventListener('keyup', show_preview);
+    // Add event listeners
+    doc.addEventListener('keydown', handle_tab); // Handle "Tab" key for indentation
+    doc.addEventListener('keyup', show_preview); // Update the preview on keyup events
+
     /*
+    // Uncomment this block to enable the "Clear All" button functionality
     clear.addEventListener('click', function(event) {
-        event.preventDefault();
-        clearAll();
+        event.preventDefault(); // Prevent default link behavior
+        clearAll(); // Clear all textareas
     });
     */
+
+    // Style the parent container
     doc.style.backgroundColor = "white";
     doc.style.padding = "10px";
+
+    // Initialize the preview
     show_preview();
 }
+
+// Initialize the script
 init();
 </script>
 
- <style>
- textarea.coderunner-ui-element {
+<style>
+/* Style for the textareas */
+textarea.coderunner-ui-element {
    background: #fff;
    color: #000;
    width: 100%;
    border-radius: 6px; 
- }
- iframe#preview {
+}
+
+/* Style for the iframe preview */
+iframe#preview {
    background: #fff;
    border: 3px solid #000;
    width: 100%;
    height: 200px;
    border-radius: 6px; 
- }
- </style>
-<!--
-<a id="crui_clearall" href="#" title="Click to clear all">Clear All</a>
-<br>
--->
+}
+</style>
+
 <div id="_parent">
-<textarea id="ui_html" rows="10" value="" class="coderunner-ui-element" name='ui_html' spellcheck="false" placeholder="HTML" autocapitalize="off" autofocus
-style="font-family: monospace"></textarea>
-<br>
-<textarea id="ui_css" rows="10" value="" placeholder="CSS" class="coderunner-ui-element" name='ui_css' spellcheck="false" autocapitalize="off"
-style="font-family: monospace; margin-top:10px"></textarea>
-<br>
-<textarea id="ui_js" rows="10" value="" class="coderunner-ui-element" name='ui_js' spellcheck="false" placeholder="JavaScript" autocapitalize="off" style="font-family: monospace; margin-top:10px"></textarea>
-<br>
-Preview
-<br>
-<iframe id="preview"></iframe>
-<br>
+    <!-- HTML textarea -->
+    <textarea id="ui_html" rows="10" value="" class="coderunner-ui-element" name='ui_html' spellcheck="false" placeholder="HTML" autocapitalize="off" autofocus
+    style="font-family: monospace"></textarea>
+    <br>
+    <!-- CSS textarea -->
+    <textarea id="ui_css" rows="10" value="" placeholder="CSS" class="coderunner-ui-element" name='ui_css' spellcheck="false" autocapitalize="off"
+    style="font-family: monospace; margin-top:10px"></textarea>
+    <br>
+    <!-- JavaScript textarea -->
+    <textarea id="ui_js" rows="10" value="" class="coderunner-ui-element" name='ui_js' spellcheck="false" placeholder="JavaScript" autocapitalize="off" style="font-family: monospace; margin-top:10px"></textarea>
+    <br>
+    <!-- Preview section -->
+    Preview
+    <br>
+    <iframe id="preview"></iframe>
+    <br>
 </div>
